samples/_failures_safe/1761407724_28341c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_129210a0.c: In function ‘main’:
./samples/SAFE/__tmp_129210a0.c:168:12: error: missing terminating " character
  168 |     printf("\nAvailable compression
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_129210a0.c:168:5: error: expected expression at end of input
  168 |     printf("\nAvailable compression
      |     ^~~~~~
./samples/SAFE/__tmp_129210a0.c:168:5: error: expected declaration or statement at end of input
